# OcctRenderLab

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
apps/contour_svg/: CMakeLists.txt  main.cpp
apps/contour_sweep/: CMakeLists.txt  main.cpp
apps/contour_viewer/: CMakeLists.txt  OutlineRender.cpp  OutlineRender.h  main.cpp  selfcheck.cpp
contour/: CMakeLists.txt
contour/apps/contour_svg/: main.cpp
contour/apps/contour_sweep/: main.cpp
contour/cmake/: occtcontourConfig.cmake.in
contour/examples/consumer_smoke/: CMakeLists.txt  main.cpp
contour/include/occtcontour/: ModelLoad.h
contour/src/: ModelLoad.cpp  OuterContour.cpp
contour/tests/: contour_tests.cpp
contour/tests/data/: cylinder.step  plate.step  sphere.step
docs/plans/: 2026-06-18-outer-contour.md  2026-06-18-split-algo-render.md
docs/specs/: 2026-06-18-outer-contour-design.md  2026-06-18-split-algo-render-design.md
render/: CMakeLists.txt
render/apps/contour_viewer/: main.cpp  selfcheck.cpp
render/include/ocrlrender/: OutlineRender.h
render/src/: OutlineRender.cpp
src/: ModelLoad.cpp  OuterContour.cpp  OuterContour.h  smoke_main.cpp
tests/: CMakeLists.txt  contour_tests.cpp
tests/data/: bar.step  knife.step
